--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-  <main></main>
+  <h1>Game of Thrones Books</h1>
+  <ul id="books"></ul>
+  <script src="index.js"></script>
 </body>
 </html>
